ui/deploy/env/overlays/prod/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: APP_NAME
  namespace: PROJECT_NAME
spec:
  replicas: 3
